--- a/Isaac/Isaac/Isaac.vcxproj
+++ b/Isaac/Isaac/Isaac.vcxproj
@@ -138,6 +138,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Boss.cpp" />
+    <ClCompile Include="Coin.cpp" />
     <ClCompile Include="DoubleBuffering.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Fatty.cpp" />
@@ -153,6 +155,8 @@
     <ClCompile Include="UIMgr.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Boss.h" />
+    <ClInclude Include="Coin.h" />
     <ClInclude Include="DoubleBuffering.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Fatty.h" />
