--- a/Isaac/Isaac/Isaac.vcxproj
+++ b/Isaac/Isaac/Isaac.vcxproj
@@ -149,7 +149,8 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="Room.cpp" />
-    <ClCompile Include="StartScene.cpp" />
+    <ClCompile Include="SceneMgr.cpp" />
+    <ClCompile Include="Shop.cpp" />
     <ClCompile Include="Sucker.cpp" />
     <ClCompile Include="UIMgr.cpp" />
   </ItemGroup>
@@ -164,7 +165,8 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="Room.h" />
-    <ClInclude Include="StartScene.h" />
+    <ClInclude Include="SceneMgr.h" />
+    <ClInclude Include="Shop.h" />
     <ClInclude Include="Sucker.h" />
     <ClInclude Include="UIMgr.h" />
   </ItemGroup>
